--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/csshortcut/csshortcut-app#readme",
   "devDependencies": {
     "gulp": "^3.9.1",
+    "gulp-connect": "^5.0.0",
     "gulp-pug": "^3.3.0",
     "gulp-stylus": "^2.6.0"
   }
