--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   },
   "homepage": "https://github.com/csshortcut/csshortcut-app#readme",
   "devDependencies": {
+    "babel-preset-es2015": "^6.24.1",
     "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
     "gulp-connect": "^5.0.0",
     "gulp-data": "^1.2.1",
     "gulp-imagemin": "^3.1.1",
