--- a/package.json
+++ b/package.json
@@ -18,12 +18,17 @@
   "homepage": "https://github.com/csshortcut/csshortcut-app#readme",
   "devDependencies": {
     "babel-preset-es2015": "^6.24.1",
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb-base": "^11.1.3",
+    "eslint-plugin-import": "^2.2.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-connect": "^5.0.0",
     "gulp-data": "^1.2.1",
+    "gulp-eslint": "^3.0.1",
     "gulp-imagemin": "^3.1.1",
     "gulp-pug": "^3.3.0",
+    "gulp-stylint": "^4.0.0",
     "gulp-stylus": "^2.6.0"
   }
 }
