--- a/package.json
+++ b/package.json
@@ -17,19 +17,17 @@
   },
   "homepage": "https://github.com/csshortcut/csshortcut-app#readme",
   "devDependencies": {
-    "babel-preset-es2015": "^6.24.1",
-    "eslint": "^3.19.0",
-    "eslint-config-airbnb-base": "^11.1.3",
-    "eslint-plugin-import": "^2.2.0",
-    "gulp": "^3.9.1",
-    "gulp-babel": "^6.1.2",
-    "gulp-connect": "^5.0.0",
-    "gulp-data": "^1.2.1",
-    "gulp-eslint": "^3.0.1",
+    "@babel/core": "^7.25.2",
+    "@babel/preset-env": "^7.25.4",
+    "gulp": "^5.0.0",
+    "gulp-babel": "^8.0.0",
+    "gulp-connect": "^5.7.0",
+    "gulp-data": "^1.3.1",
+    "gulp-eslint": "^6.0.0",
     "gulp-gh-pages": "^0.5.4",
-    "gulp-imagemin": "^3.1.1",
-    "gulp-pug": "^3.3.0",
-    "gulp-stylint": "^4.0.0",
-    "gulp-stylus": "^2.6.0"
+    "gulp-imagemin": "^7.1.0",
+    "gulp-pug": "^5.0.0",
+    "gulp-stylint": "^4.0.2",
+    "gulp-stylus": "^3.0.1"
   }
 }
