--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Projeto descolado",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "node_modules/.bin/gulp build",
+    "start": "node_modules/.bin/gulp server"
   },
   "repository": {
     "type": "git",
@@ -21,6 +22,7 @@
     "@babel/preset-env": "^7.25.4",
     "gulp": "^5.0.0",
     "gulp-babel": "^8.0.0",
+    "gulp-cli": "^3.0.0",
     "gulp-connect": "^5.7.0",
     "gulp-data": "^1.3.1",
     "gulp-eslint": "^6.0.0",
